--- a/ingest/src/main/resources/log4j.properties
+++ b/ingest/src/main/resources/log4j.properties
@@ -1,14 +1,18 @@
-log4j.rootLogger=WARN, stdout
+# Set everything to be logged to the console
+log4j.rootCategory=INFO, console
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.target=System.out
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss} %c{1}: %m%n
 
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{dd MMM HH:mm:ss} %p [%c{2}] - %m%n
+log4j.logger.geotrellis.spark=INFO
 
-# http://stackoverflow.com/questions/23869207/what-is-the-significance-of-log4j-rootlogger-property-in-log4j-properties-file
-log4j.logger.geotrellis.dem=INFO
+# Settings to quiet third party logs that are too verbose
+log4j.logger.org.eclipse.jetty=WARN
+log4j.logger.org.apache.spark=WARN
+log4j.logger.org.apache.hadoop=WARN
+log4j.logger.org.apache.spark.repl.SparkIMain$exprTyper=WARN
+log4j.logger.org.apache.spark.repl.SparkILoop$SparkILoopInterpreter=WARN
 
-log4j.category.mil.nga.giat.geowave.datastore.accumulo.BasicAccumuloOperations=ERROR
-log4j.category.org.apache.accumulo.core.client.ClientConfiguration=ERROR
-log4j.category.org.apache.accumulo.core.client.impl.ThriftTransportPool=ERROR
-log4j.category.org.apache.thrift.transport.TIOStreamTransport=ERROR
-log4j.category.org.geoserver.platform=ERROR
+log4j.logger.org.spark-project.jetty=WARN
+org.spark-project.jetty.LEVEL=WARN
