+improved ingests, static, new server routes, caching

--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -13,4 +13,5 @@ akka.http.server.idle-timeout = infinite
 server {
   static-path = "/var/www/html"
   attribute-store-path="/data/catalog"
+  tile-cache = 1000000
 }
