--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -12,6 +12,6 @@ akka.http.server.idle-timeout = infinite
 
 server {
   static-path = "/var/www/html"
-  attribute-store-path="/data/catalog"
+  attribute-store-path="file:///Users/rob/proj/gt/demos/geotrellis-pointcloud-demo/catalog"
   tile-cache = 1000000
 }
