--- a/server/src/main/resources/application.conf
+++ b/server/src/main/resources/application.conf
@@ -12,6 +12,6 @@ akka.http.server.idle-timeout = infinite
 
 server {
   static-path = "/var/www/html"
-  attribute-store-path="/data/catalog"
+  catalog = "s3://geotrellis-test/pointcloud-demo/catalog/"
   tile-cache = 1000000
 }
