--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,31 @@ src/app-backend/.sbt
 
 .vagrant
 
+# Terraform
+deployment/terraform/.terraform
+*.tfvars
+*.tfstate
+*.tfplan
+
+# Node and Webpack
+node_modules/
+npm-debug.log
+index.html
+pgw.communitymapping*.js
+pgw.communitymapping*.js.map
+vendor.bundle.js
+dist/
+
+
 # IntelliJ IDEA Files #
 
 *.iml
 *.ipr
 *.iws
 *.idea
+
+# macOS
+.DS_Store
 
 # Emacs #
 
