--- a/src/app-frontend/package.json
+++ b/src/app-frontend/package.json
@@ -22,11 +22,14 @@
   },
   "homepage": "https://github.com/geotrellis/geotrellis-poincloud-demo",
   "dependencies": {
+    "@blueprintjs/core": "1.8.0",
     "axios": "0.15.3",
     "leaflet": "0.7.7",
     "leaflet-fullscreen": "1.0.2",
     "lodash": "4.17.4",
+    "object-path-immutable": "^0.5.1",
     "react": "15.4.2",
+    "react-addons-css-transition-group": "15.4.2",
     "react-addons-test-utils": "15.4.2",
     "react-addons-transition-group": "15.4.2",
     "react-dom": "15.4.2",
