Added hillshade interaction

--- a/src/app-backend/server/src/main/resources/application.conf
+++ b/src/app-backend/server/src/main/resources/application.conf
@@ -13,5 +13,5 @@ akka.http.server.idle-timeout = infinite
 server {
   static-path = "/var/www/html"
   catalog = "s3://geotrellis-test/pointcloud-demo/catalog"
-  tile-cache = 1000000
+  tile-cache = 10
 }
