--- a/src/app-frontend/package.json
+++ b/src/app-frontend/package.json
@@ -25,6 +25,7 @@
     "@blueprintjs/core": "1.8.0",
     "axios": "0.15.3",
     "leaflet": "0.7.7",
+    "leaflet-draw": "^0.4.9",
     "leaflet-fullscreen": "1.0.2",
     "lodash": "4.17.4",
     "object-path-immutable": "^0.5.1",
@@ -34,6 +35,7 @@
     "react-addons-transition-group": "15.4.2",
     "react-dom": "15.4.2",
     "react-leaflet": "0.12.3",
+    "react-leaflet-draw": "^0.13.0",
     "react-redux": "5.0.1",
     "react-router": "2.7.0",
     "react-router-redux": "2.1.0",
