Update development environment
- Bump Docker version to v17
- Bump docker-compose to 1.13
- Remove azavea.* ansible roles
- Use NFS shared folder in VM

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ deployment/terraform/.terraform
 *.tfstate
 *.tfplan
 
+# Ansible
+deployment/ansible/roles/azavea.*
+
 # Node and Webpack
 node_modules/
 npm-debug.log
