--- a/deployment/ansible/roles.yml
+++ b/deployment/ansible/roles.yml
@@ -1,8 +1,8 @@
 - src: azavea.pip
-  version: 0.1.1
+  version: 1.0.0
 
 - src: azavea.docker
-  version: 2.2.0
+  version: 4.0.0
 
 - src: azavea.unzip
   version: 0.1.2
@@ -14,4 +14,7 @@
   version: 0.3.1
 
 - src: azavea.aws-cli
+  version: 0.1.0
+
+- src: azavea.python-security
   version: 0.1.0
