--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,20 @@
 version: '2.1'
 services:
-  nginx:
-    image: pointcloud-nginx
-    build:
-      context: ./src/nginx
-      dockerfile: Dockerfile
-    ports:
-      - "9100:80"
-    volumes:
-      - ./src/nginx/srv/dist:/srv/dist:ro
-  app-frontend:
+  pc-assets:
     image: node:6.9-slim
     working_dir: /usr/src
     ports:
       - "8284:8284"
+    environment:
+      - VERSION=${TRAVIS_COMMIT}
     volumes:
         - ./src/app-frontend:/usr/src
-        - ./src/nginx/srv/dist:/usr/src/static
+        - ./nginx/_site:/usr/dist
         # Ensure node_modules cache doesn't clash with other jobs on CI.
         - /var/cache/pc-demo-node-modules:/usr/src/node_modules
-    command: npm run dev-server
-  api-server:
+    entrypoint: npm
+    command: run bundle
+  pc-api-server:
     image: openjdk:8-jre
     ports:
       - "9000:9000"
@@ -33,3 +27,13 @@ services:
       - AWS_DEFUALT_PROFILE=geotrellis
     working_dir: /opt/app-backend/
     entrypoint: ./sbt
+    command: ~server/reStart
+  pc-nginx:
+    image: nginx:1.13
+    depends_on:
+      - pc-api-server
+    ports:
+      - "8000:443"
+    volumes:
+      - ./nginx/_site:/var/www
+      - ./nginx/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
