Add STRTA to build/publish container in CI

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,21 +1,12 @@
 version: '2.1'
 services:
-  nginx:
-    image: pointcloud-nginx:${GIT_COMMIT:-latest}
+  pc-api-server:
+    image: pointcloud-api-server:${TRAVIS_COMMIT}
     build:
-      context: ./src/nginx
-      dockerfile: Dockerfile
-  app-frontend:
-    image: node:6.9-slim
-    working_dir: /usr/src
-    volumes:
-      - ./src/app-frontend:/usr/src
-      - ./src/nginx/srv/dist/:/usr/src/dist/
-      - /var/cache/pc-demo-node-modules:/usr/src/node_modules
-    entrypoint: npm
-    command: run bundle
-  api-server:
-    image: pointcloud-api-server:${GIT_COMMIT:-latest}
+        context: ./src/app-backend
+        dockerfile: Dockerfile
+  pc-nginx:
+    image: pointcloud-nginx:${TRAVIS_COMMIT}
     build:
-      context: ./src/app-backend/server
+      context: ./nginx
       dockerfile: Dockerfile
