--- a/.gitignore
+++ b/.gitignore
@@ -89,5 +89,7 @@ logs
 catalog/
 viewer
 viewer2
-src/app-frontend/sass-bak/nginx/_site
+src/app-frontend/sass-bak/
 nginx/_site
+*.log
+src/app-frontend/jest
