Rename assembly JAR

--- a/src/app-backend/Dockerfile
+++ b/src/app-backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:8-jre
 
-COPY server/target/scala-2.11/pointcloud-server-assembly-0.1.0-SNAPSHOT.jar /srv/
+COPY server/target/scala-2.11/pointcloud-server.jar /srv/
 
 EXPOSE 7070
 
 ENTRYPOINT ["java"] 
-CMD ["-Xmx1G", "-jar", "/srv/pointcloud-server-assembly-0.1.0-SNAPSHOT.jar"]
+CMD ["-Xmx1G", "-jar", "/srv/pointcloud-server.jar"]
