--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ deploy:
   skip_cleanup: true
   script: scripts/deploy.sh
   on:
-    branch: master
+    branch: tnation/update-deployment-cherrypicks
