Revert "Update deployment branch to see if things work"
This reverts commit 2503dab6564fb9734c86b8afedbfcd9c36cf0f9c.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,4 +27,4 @@ deploy:
   skip_cleanup: true
   script: scripts/deploy.sh
   on:
-    branch: tnation/update-deployment-cherrypicks
+    branch: master
